Abandoning CloseableIterator in favor of Series.